--- a/Car_Rental/src/main/resources/application.properties
+++ b/Car_Rental/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/Car_Rental
+spring.datasource.username = postgres
+spring.datasource.password = khalil
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+server.port = 8088
+
+spring.jpa.hibernate.ddl-auto = update
