--- a/Car_Rental/pom.xml
+++ b/Car_Rental/pom.xml
@@ -68,7 +68,13 @@
           <artifactId>junit</artifactId>
           <scope>test</scope>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
