--- a/Car_Rental/src/main/resources/application.properties
+++ b/Car_Rental/src/main/resources/application.properties
@@ -7,3 +7,23 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 server.port = 8088
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+
+#------------------------------------------------------------------------------------
+
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Enable spring data repos
+# spring.data.jpa.repositories.enabled=true
+
+# Replace with your connection string
+# spring.datasource.url=jdbc:mysql://localhost:3306/Car_Rental
+
+# Replace with your credentials
+# spring.datasource.username=Khalil
+# spring.datasource.password=khalil
+
+# spring.datasource.driverClassName=com.mysql.jdbc.Driver
