--- a/Car_Rental/src/main/resources/application.properties
+++ b/Car_Rental/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 server.port = 8088
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
