--- a/Car_Rental/src/main/resources/application.properties
+++ b/Car_Rental/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 server.port = 8088
 
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
 #------------------------------------------------------------------------------------
